--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Javascript passwordvalidator</title>
 </head>
 <body>
-    <p id="laTuaPassword"></p>
+    <p id="laTuaPassword" class="text-white p-box"></p>
   <script src="./js/main.js"></script>
 </body>
 </html>
